--- a/com-rade-backend/config/config.json
+++ b/com-rade-backend/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "postgres",
-    "password": "myko992003",
-    "database": "Comrade",
+    "password": "",
+    "database": "",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
