Update dependencies and enhance authentication features in Com-rade
- Added `@radix-ui/react-alert-dialog` and `axios` to package dependencies.
- Updated versions for several Radix UI components in `package.json` and `package-lock.json`.
- Implemented a new login page and integrated authentication context in the app.
- Enhanced routing with protected routes for the dashboard.
- Improved UI components with updated styles and functionality.
- Expanded README with detailed project structure, authentication system, and development guide.

--- a/com-rade-backend/package.json
+++ b/com-rade-backend/package.json
@@ -8,7 +8,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "sequelize-cli db:migrate",
     "migrate:undo": "sequelize-cli db:migrate:undo",
-    "migrate:undo:all": "sequelize-cli db:migrate:undo:all"
+    "migrate:undo:all": "sequelize-cli db:migrate:undo:all",
+    "seed": "sequelize-cli db:seed:all",
+    "seed:undo": "sequelize-cli db:seed:undo:all",
+    "seed:admin": "sequelize-cli db:seed --seed 20250122000000-create-admin-user.js",
+    "seed:users": "sequelize-cli db:seed --seed 20250122000001-create-additional-users.js"
   },
   "keywords": [],
   "author": "",
