Update API configuration and enhance dashboard components
- Changed the API base URL in the `.env` file from `http://localhost:3000/api` to `http://localhost:5000/api` for alignment with backend settings.
- Updated `vite.config.ts` to configure the development server settings, including host and port.
- Refactored the import of `SidebarDashboard` in `App.tsx` to streamline component structure.
- Introduced new `SidebarDashboard` component with enhanced UI and functionality.
- Removed outdated dashboard data and related components to improve codebase clarity and maintainability.
- Added role management in the authentication context to support role-based access control.
- Implemented a logout modal for user confirmation before logging out.
- Enhanced the overall structure and organization of UI components for better usability.

--- a/com-rade-backend/config/config.json
+++ b/com-rade-backend/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "postgres",
-    "password": "",
-    "database": "",
+    "password": "myko992003",
+    "database": "Comrade",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
